--- a/paquescolar-web/src/main/webapp/app/reg07Liquidacion.xhtml
+++ b/paquescolar-web/src/main/webapp/app/reg07Liquidacion.xhtml
@@ -160,7 +160,8 @@
                     </div>
                 </div>
                 <div class="ui-g-12">
-                    <p:dataTable id="tblDetalleLiqInc" value="#{liquidacionMB.lstDetalleLiquidacionIncs}" var="det" rowIndexVar="rowId">
+                    <p:dataTable id="tblDetalleLiqInc" value="#{liquidacionMB.lstDetalleLiquidacionIncs}" var="det" rowIndexVar="rowId"
+                                 rowKey="#{det.idDetLiqInc}" rowStyleClass="#{det.historico eq 1 ? 'filaEliminada' : null}">
                         <p:column headerText="Id" style="text-align: center;" width="40">
                             #{rowId+1}
                         </p:column>
@@ -168,9 +169,11 @@
                             <p:outputLabel value="#{det.idConcepto.descripcion}"/>
                         </p:column>
                         <p:column headerText="Borrar" style="text-align: center;" width="40">
-                            <p:commandLink >
+                            <p:commandLink action="#{liquidacionMB.eliminarObservacion()}" update="tblDetalleLiqInc">
                                 <p:outputLabel rendered="#{det.historico eq 1}"> <i class="fa fa-check-circle"></i></p:outputLabel>
                                 <p:outputLabel rendered="#{det.historico ne 1}"> <i class="fa fa-minus-circle"></i></p:outputLabel>
+                                <f:setPropertyActionListener value="#{det}" target="#{liquidacionMB.detalleLiquidacionInc}"/>  
+                                <f:setPropertyActionListener value="#{rowId}" target="#{liquidacionMB.rowEdit}"/>  
                             </p:commandLink>
                         </p:column>
                     </p:dataTable>
