--- a/cooperacion-web/src/main/webapp/app/inicio.xhtml
+++ b/cooperacion-web/src/main/webapp/app/inicio.xhtml
@@ -36,9 +36,9 @@
 
     <ui:define name="contenido">
         <div class="p-ai-center vertical-container">
-            <div class="p-grid dashboard p-jc-center" style="background-color: white !important; height: 72vh;">
+            <div class="p-grid dashboard p-jc-center" style="background-color: white !important;">
                 <div class="p-col-6 p-md-4 p-xl-3" onclick="location.href = 'datosCe.mined';PF('dlgMensaje').show();" style="cursor: pointer;display:#{(userBean.centroEscolar)?'block':'none'};">
-                    <div class="card overview-box" style="text-align: center !important; margin-top: -200px;">
+                    <div class="card overview-box" style="text-align: center !important;">
                         <br/><br/>
                         <p:graphicImage name="editar.png" library="images" style="background-color: white;" width="80" />
                         <br/><br/>
@@ -47,7 +47,7 @@
                     </div>
                 </div>
                 <div class="p-col-6 p-md-4 p-xl-3" onclick="location.href = 'listadoProyectos.mined';PF('dlgMensaje').show();" style="cursor: pointer;">
-                    <div class="card overview-box" style="text-align: center !important; margin-top: -200px;">
+                    <div class="card overview-box" style="text-align: center !important;">
                         <br/><br/>
                         <p:graphicImage name="lista.png" library="images" style="background-color: white;" width="80"/>
                         <br/><br/>
@@ -57,7 +57,7 @@
                 </div>
                 <div class="p-col-6 p-md-4 p-xl-3" onclick="location.href = 'mantto/inicioManttos.mined';PF('dlgMensaje').show();" 
                      style="cursor: pointer; display:#{(userBean.perfilUsuario eq 'ADMIN')?'block':'none'}">
-                    <div class="card overview-box" style="text-align: center !important; margin-top: -200px;">
+                    <div class="card overview-box" style="text-align: center !important;">
                         <br/><br/>
                         <p:graphicImage name="settings.png" library="images" style="background-color: white;" width="80"/>
                         <br/><br/>
@@ -67,7 +67,7 @@
                 </div>
                 <div class="p-col-6 p-md-4 p-xl-3" onclick="location.href = 'reportes.mined';PF('dlgMensaje').show();" 
                      style="cursor: pointer; display:#{(userBean.perfilUsuario eq 'ADMIN')?'block':'none'}">
-                    <div class="card overview-box" style="text-align: center !important; margin-top: -200px;">
+                    <div class="card overview-box" style="text-align: center !important;">
                         <br/><br/>
                         <p:graphicImage name="reporte.png" library="images" style="background-color: white;" width="80"/>
                         <br/><br/>
