--- a/cooperacion-web/src/main/webapp/app/listadoProyectos.xhtml
+++ b/cooperacion-web/src/main/webapp/app/listadoProyectos.xhtml
@@ -228,7 +228,7 @@
                                 </h:outputText>
                             </p:column>
                             <p:column headerText="Estado" width="100" filterable="false">
-                                <h:outputText value="#{proyecto.idEstado eq 1 ? 'DIGITADO' : (proyecto.idEstado eq 2 ? 'APROBADO': 'DENEGADO')}"/>
+                                <h:outputText value="#{proyecto.idEstado eq 1 ? 'DIGITADO' : (proyecto.idEstado eq 2 ? 'APROBADO': (proyecto.idEstado eq 3?'OBSERVADO':'DENEGADO'))}"/>
                             </p:column>
                             <p:column width="30" filterable="false">
                                 <p:commandButton icon="pi pi-eye" update="manage-product-content" action="#{listadoView.buscarProyecto}"
