--- a/cooperacion-web/src/main/webapp/app/fragmento/infoProyecto.xhtml
+++ b/cooperacion-web/src/main/webapp/app/fragmento/infoProyecto.xhtml
@@ -148,7 +148,8 @@
                     <p:fileUpload mode="simple" skinSimple="true" style="float: right;" label="Seleccionar" auto="true" 
                                   disabled="#{listadoView.proyecto.idEstado eq 2}"
                                   listener="#{listadoView.handleFileUpload}" update="tblArchivos" multiple="true"
-                                  rendered="#{userBean.centroEscolar}" process="@this" fileLimit="20000000"/>
+                                  rendered="#{userBean.centroEscolar}" process="@this" fileLimit="20000000" 
+                                  invalidSizeMessage="El tamaño máximo por archivo es 20MB"/>
                 </h:panelGrid>
 
                 <p:dataTable id="tblArchivos" class="invoice-to" value="#{listadoView.lstArchivos}" var="archivo">
