--- a/paquescolar-web/src/main/webapp/app/proveedor/regDatosGenerales.xhtml
+++ b/paquescolar-web/src/main/webapp/app/proveedor/regDatosGenerales.xhtml
@@ -167,7 +167,7 @@
                                     </p:panelGrid>
                                 </p:panel>
                             </p:tab>
-                            <p:tab title="Datos de Calificación" rendered="#{datosGeneralesMB.capacidadInst.idMuestraInteres.idDetProcesoAdq.idRubroAdq.idRubroInteres ne 2}">
+                            <p:tab title="Datos de Calificación" rendered="#{datosGeneralesMB.capacidadInst.idMuestraInteres.idRubroInteres.idRubroInteres ne 2}">
                                 <p:panelGrid columns="2" columnClasses="col3_label,col9" 
                                              styleClass="ui-panelgrid-blank form-group form-elements" style="border:0px none; background-color:transparent;">
                                     <p:outputLabel value="Departamento Calificado: "/>
