--- a/paquescolar-web/src/main/webapp/app/comunes/filtroParticipanteOferta.xhtml
+++ b/paquescolar-web/src/main/webapp/app/comunes/filtroParticipanteOferta.xhtml
@@ -54,7 +54,7 @@
                                             <f:facet name="header">
                                                 <p:row>
                                                     <p:column colspan="2">
-                                                        <p:graphicImage value="/DynamicImageServlet?file=#{bundle['path_images']}fotoProveedores/#{capaEmpresa.idMuestraInteres.idEmpresa.idPersona.urlImagen}"/>
+                                                        <p:graphicImage value="/DynamicImageServlet?file=#{capaEmpresa.idMuestraInteres.idEmpresa.idPersona.urlImagen}"/>
                                                     </p:column>
                                                 </p:row>
                                             </f:facet>
@@ -180,7 +180,7 @@
                                             <f:facet name="header">
                                                 <p:row>
                                                     <p:column rowspan="2">
-                                                        <p:graphicImage value="/DynamicImageServlet?file=#{bundle['path_images']}fotoProveedores/#{capaEmpresa.idMuestraInteres.idEmpresa.idPersona.urlImagen}"/>
+                                                        <p:graphicImage value="/DynamicImageServlet?file=#{capaEmpresa.idMuestraInteres.idEmpresa.idPersona.urlImagen}"/>
                                                     </p:column>
                                                 </p:row>
                                             </f:facet>
